--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"react-native": "0.64.2",
 		"react-native-maps": "0.29.3",
 		"react-native-web": "0.17.1",
-		"react-native-xml2js": "^1.0.3"
+		"react-native-xml2js": "^1.0.3",
+		"expo-file-system": "~13.0.3",
+		"expo-document-picker": "~10.0.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9"
