--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
 		"eject": "expo eject"
 	},
 	"dependencies": {
+		"@react-native-async-storage/async-storage": "^1.15.9",
 		"expo": "~43.0.0",
+		"expo-document-picker": "~10.0.3",
+		"expo-file-system": "~13.0.3",
 		"expo-status-bar": "~1.1.0",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
 		"react-native": "0.64.2",
 		"react-native-maps": "0.29.3",
 		"react-native-web": "0.17.1",
-		"react-native-xml2js": "^1.0.3",
-		"expo-file-system": "~13.0.3",
-		"expo-document-picker": "~10.0.3"
+		"react-native-xml2js": "^1.0.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9"
