--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "^1.15.9",
 		"expo": "~43.0.0",
+		"expo-dev-client": "^0.6.3",
 		"expo-document-picker": "~10.0.3",
 		"expo-file-system": "~13.0.3",
+		"expo-location": "~13.0.4",
 		"expo-status-bar": "~1.1.0",
+		"expo-task-manager": "~10.0.3",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
 		"react-native": "0.64.2",
