--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
 		"react-native": "0.64.2",
+		"react-native-dialog": "^9.2.0",
 		"react-native-maps": "0.29.3",
 		"react-native-web": "0.17.1",
 		"react-native-xml2js": "^1.0.3"
