--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"react-dom": "17.0.1",
 		"react-native": "0.64.2",
 		"react-native-dialog": "^9.2.0",
-		"react-native-maps": "0.29.3",
+		"react-native-maps": "https://github.com/lscholte/react-native-maps.git",
 		"react-native-svg-transformer": "^0.14.3",
 		"react-native-svg": "^12.1.0",
 		"react-native-web": "0.17.1",
