--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-	"main": "node_modules/expo/AppEntry.js",
-	"scripts": {
-		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"web": "expo start --web",
-		"eject": "expo eject"
-	},
-	"dependencies": {
-		"@react-native-async-storage/async-storage": "^1.15.9",
-		"expo": "~43.0.0",
-		"expo-dev-client": "^0.6.3",
-		"expo-document-picker": "~10.0.3",
-		"expo-file-system": "~13.0.3",
-		"expo-location": "~13.0.4",
-		"expo-status-bar": "~1.1.0",
-		"expo-task-manager": "~10.0.3",
-		"react": "17.0.1",
-		"react-dom": "17.0.1",
-		"react-native": "0.64.2",
-		"react-native-dialog": "^9.2.0",
-		"react-native-maps": "https://github.com/lscholte/react-native-maps.git",
-		"react-native-svg-transformer": "^0.14.3",
-		"react-native-svg": "^12.1.0",
-		"react-native-web": "0.17.1",
-		"react-native-xml2js": "^1.0.3"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.12.9"
-	},
-	"private": true
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
+  },
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.9",
+    "expo": "~43.0.0",
+    "expo-dev-client": "^0.6.3",
+    "expo-document-picker": "~10.0.3",
+    "expo-file-system": "~13.0.3",
+    "expo-location": "~13.0.4",
+    "expo-status-bar": "~1.1.0",
+    "expo-task-manager": "~10.0.3",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.2",
+    "react-native-dialog": "^9.2.0",
+    "react-native-maps": "https://github.com/lscholte/react-native-maps.git",
+    "react-native-svg-transformer": "^0.14.3",
+    "react-native-svg": "^12.1.0",
+    "react-native-web": "0.17.1",
+    "react-native-xml2js": "^1.0.3",
+    "@react-native-community/slider": "4.1.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9"
+  },
+  "private": true
 }
